--- a/resources/scss/utilities.scss
+++ b/resources/scss/utilities.scss
@@ -5,3 +5,10 @@
 }
 
 .no-padding { padding: 0!important; }
+
+
+.flag { display: inline-block; background-color: olive; width: 18px; height: 14px; overflow: hidden;
+	&.eur { background-color: red; }
+	&.usd { background-color: black; }
+	&.dkk { background-color: gray; }
+}
