3 currencies on hoepage

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -28,6 +28,7 @@ $grid-gutter-width: 15px;
 @import "utilities";
 @import "components/_header";
 @import "components/_footer";
+@import "components/_panel";
 @import "components/_chart";
 @import "components/_currencies-dropdown";
 
