changes to fast-converter to suit the advanced one .. and started on advanced on

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -30,7 +30,7 @@ $grid-gutter-width: 15px;
 @import "components/_footer";
 @import "components/_panel";
 @import "components/_chart";
-@import "components/_currencies-dropdown";
+@import "components/_currencies";
 
 
 
