--- a/resources/scss/components/_currencies.scss
+++ b/resources/scss/components/_currencies.scss
@@ -7,3 +7,10 @@
 	.dropdown-menu { max-height: 240px; overflow-y: auto; }
 	
 }
+
+.currencies-list {
+	li { display: inline-block;
+		&:hover {  }
+		&.active {  }
+	}
+}
