--- a/resources/scss/components/_currencies.scss
+++ b/resources/scss/components/_currencies.scss
@@ -9,7 +9,7 @@
 }
 
 .currencies-list { padding: 0; margin: 0;
-	li { width: 18%; padding: 0; margin: 1%; text-align: center; background: #f9f9f9;
+	li { background: #f9f9f9; width: 18%; padding: 0; margin: 1%; text-align: center;
 		& + li { margin-left: 0; }
 	}
 }
