--- a/resources/scss/utilities.scss
+++ b/resources/scss/utilities.scss
@@ -1,8 +1,14 @@
 .no-padding { padding: 0!important; }
 
-
 .flag { display: inline-block; background-color: olive; width: 18px; height: 14px; overflow: hidden;
 	&.eur { background-color: red; }
 	&.usd { background-color: black; }
 	&.dkk { background-color: gray; }
 }
+
+.loading { z-index: 20; position: absolute; top: 0; left: 0; bottom: 0; right: 0; background-color: rgba($black, 0.05);
+	$size: 42px;
+	.fa { position: absolute; top: 50%; left: 50%; margin: -($size / 2) 0 0  -($size / 2); color: #000; font-size: $size; }
+}
+
+form.converter { position: relative; }
