--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -26,6 +26,7 @@ $grid-gutter-width: 15px;
 /* Importing app stuff! */
 @import "mixins";
 @import "utilities";
+@import "components/_datepicker";
 @import "components/_header";
 @import "components/_footer";
 @import "components/_panel";
