added history tables and auto-switch when the same currency is selected

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -27,6 +27,7 @@ $grid-gutter-width: 15px;
 @import "mixins";
 @import "utilities";
 @import "components/_datepicker";
+@import "components/_nav";
 @import "components/_header";
 @import "components/_footer";
 @import "components/_panel";
