--- a/resources/scss/components/_header.scss
+++ b/resources/scss/components/_header.scss
@@ -3,6 +3,10 @@
 	and no changes to the components that it will include! 
 */
 
-header { padding-top: 20px;
-	
+header {
+	.navbar {
+		&.navbar-with-ad { @include box-shadow(0 2px 12px rgba(0, 0, 0, .05)); @include border-radius(0); border-width: 0; border-bottom-width: 1px;
+			.navbar-header { @include clearfix(); float: none; padding: 10px; }
+		}
+	}
 }
