--- a/resources/scss/components/_footer.scss
+++ b/resources/scss/components/_footer.scss
@@ -3,4 +3,8 @@
 	and no changes to the components that it will include! 
 */
 
-footer.footer { @include box-shadow(0 -2px 12px rgba(0, 0, 0, .05)); background-color: $navbar-default-bg; border-top: 1px solid $navbar-default-border; }
+footer.footer { @include box-shadow(0 -2px 12px rgba(0, 0, 0, .05)); background-color: $navbar-default-bg; color: $navbar-default-color;
+	a { color: $navbar-default-color;
+		&:hover, &:active, &:focus { color: $white; }
+	}
+}
