--- a/resources/scss/default.scss
+++ b/resources/scss/default.scss
@@ -6,5 +6,5 @@
 $footer-height: 60px;
 
 html { position: relative; min-height: 100%; }
-body { margin-bottom: $footer-height; }
+body { background: url(../img/money-pattern.jpg) $body-bg; margin-bottom: $footer-height; }
 .footer { position: absolute; bottom: 0; width: 100%; height: $footer-height; line-height: $footer-height; }
