--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,6 +2,8 @@
 /* Colors */
 $black: #000;
 $white: #fff;
+$green: #73a900;
+$red: #ff0000;
 
 /* Fonts */
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,400i,700);
