--- a/resources/scss/components/_panel.scss
+++ b/resources/scss/components/_panel.scss
@@ -16,3 +16,8 @@
 		}
 	}
 }
+
+.panel-wrapper {
+	> h1, > h2, > h3 { padding: 10px 5px; margin: 0; color: #000021; font-size: 16px; font-weight: 500; }
+	.chart-wrapper { padding-top: 5px!important; }
+}
