added gold flag and made the header bg repeat

--- a/resources/scss/utilities.scss
+++ b/resources/scss/utilities.scss
@@ -6,7 +6,7 @@
 	// country , currency
 	&.za, &.zar { background-position: -16px -55px; }
 	&.xdr { background-position: 0 -0; } // cursul draciei de fondul bancilor internationale...
-	&.xau { background-position: 0 0; } // gram de haur ...
+	&.xau { background-position: -32px -55px; } // gram de haur ...
 	&.us, &.usd { background-position: 0 -55px; }
 	&.ua, &.uah { background-position: -80px -44px; }
 	&.tr, &.try { background-position: -64px -44px; }
