--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -13,6 +13,8 @@ $red: #ff0000;
 		List with all variables can be found here:
 			node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables
 */
+$currencies-bg: #000022;
+$page-title-color: #9698B2;
 
 $body-bg: #eee;
 // $font-family-sans-serif:  Ubuntu, Helvetica, Arial, sans-serif;
@@ -22,23 +24,8 @@ $font-family-sans-serif: 'Lato', sans-serif;
 $grid-columns: 12;
 $grid-gutter-width: 15px;
 
-$navbar-default-color: #9698B2;
-$navbar-default-bg: #000022;
-
-$navbar-default-link-color:	$navbar-default-color;
-$navbar-default-link-hover-color:	 #fff;
-$navbar-default-link-active-bg: $body-bg;
-
-// // Navbar brand label
-// $navbar-default-brand-color:               $navbar-default-link-color !default;
-// $navbar-default-brand-hover-color:         darken($navbar-default-brand-color, 10%) !default;
-// $navbar-default-brand-hover-bg:            transparent !default;
-
-// // Navbar toggle
-$navbar-default-toggle-hover-bg: $navbar-default-link-active-bg;
-$navbar-default-toggle-icon-bar-bg: $navbar-default-color;
-$navbar-default-toggle-border-color: $navbar-default-color;
-
+$navbar-default-color: $page-title-color;
+$navbar-default-bg: #fff;
 
 @import "bootstrap";
 /* END */
