--- a/resources/scss/components/_header.scss
+++ b/resources/scss/components/_header.scss
@@ -3,10 +3,20 @@
 	and no changes to the components that it will include! 
 */
 
-header {
-	.navbar {
-		&.navbar-with-ad { background: url(../img/header.png) top center rgba($navbar-default-bg, 0.8); @include box-shadow(0 2px 12px rgba(0, 0, 0, .05)); @include border-radius(0); border-width: 0;
-			.navbar-header { @include clearfix(); float: none; padding: 10px; }
+header { @include box-shadow(0 2px 12px rgba(0, 0, 0, .05)); margin-bottom: 10px;
+	.navbar { @include border-radius(0); border-width: 0; margin-bottom: 0; min-height: 20px;
+		&.navbar-main {  }
+		&.navbar-info { background: url(../img/header.png) top center rgba($currencies-bg, 0.8);
+			.page-title { text-align: center; }
+		}
+	}
+
+	@media (min-width: $grid-float-breakpoint) {
+		.navbar {
+			&.navbar-main { padding: 10px 0; }
+			&.navbar-info { padding: 6px 0 10px 0;
+				.page-title { text-align: left; }
+			}
 		}
 	}
 }
