--- a/resources/scss/utilities.scss
+++ b/resources/scss/utilities.scss
@@ -65,3 +65,7 @@ form.converter { position: relative; }
 	h1, h2, h3, h4 { padding: 0; margin: 4px 0 0 0; font-size: 14px; color: $page-title-color; }
 }
 
+section.white { background-color: $white; padding: 10px 0;
+	.ad-as-panel { margin-bottom: 0; }
+}
+
